<resources>
    <string name="app_name">video</string>

    <string name="no_video_for_play">无可播放的视频地址,请检查网络状态</string>
    <string name="video_error_play">视频播放错误,请检查网络状态</string>

    <string name="ask">提问</string>
    <string name="note">笔记</string>

    <string name="get_video">正在获取视频地址.. </string>
    <string name="loading_rate">正在加载视频..%s</string>
    <string name="video_error">视频播放错误,请检查网络状态</string>

    <string name="settings">设置</string>
    <string name="settings_size">画面比例:</string>
    <string name="settings_quality">清 晰 度:</string>
    <string name="settings_rate">播放速度:</string>
    <string name="settings_language">字幕选择:</string>
    <string name="view_original">原始</string>
    <string name="view_4_3">4:3</string>
    <string name="view_16_9">16:9</string>
    <string name="view_fill">铺满</string>
    <string name="quality_lower">极速</string>
    <string name="quality_smooth">流畅</string>
    <string name="quality_standard">标清</string>
    <string name="quality_high">高清</string>
    <string name="quality_super_high">超清</string>
    <string name="play_rate_100X">1X</string>
    <string name="play_rate_125X">1.25X</string>
    <string name="play_rate_150X">1.5X</string>

    <string-array name="subtitles">
        <item>不可选</item>
    </string-array>

    <string name="network">网络</string>
    <string name="dlg_not_wifi">您目前的网络是非Wi-Fi环境，继续播放可能会带来较多的流量费用,是否继续播放?</string>
    <string name="dlg_continue_play">继续播放</string>
    <string name="dlg_cancel">取消</string>
    <string name="dlg_ok">确定</string>
    <string name="dlg_retry">重试</string>
    <string name="network_network_err">网络异常</string>
    <string name="network_network_err_msg">网络未连接,请检查网络后重试</string>

    <string name="gesture_change_video_position">左右滑动,调节播放进度</string>
</resources>
