<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              style="@style/video_style_network">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/video_common_60dp">

        <TextView android:layout_width  ="match_parent"
                  android:layout_height ="match_parent"
                  android:id            ="@+id/tv_title"
                  android:text="@string/network_network_err"
                  style="@style/video_style_network.title"
                />

    </LinearLayout>

    <TextView android:id            ="@+id/tv_content"
              android:layout_width  ="match_parent"
              android:layout_height ="wrap_content"
              android:gravity="center"
              style="@style/video_style_network.content"
              android:text          ="@string/network_network_err_msg"
            />

    <View android:layout_width  ="match_parent"
          android:layout_height="0.3dp"
          android:background   ="@color/transparent_white_30"
          android:layout_below ="@+id/tv_content"/>

    <LinearLayout android:layout_width  ="match_parent"
                  android:layout_height ="45dp"
                  android:orientation   ="horizontal"
                  android:id            ="@+id/ll_bottom"
                  android:layout_below  ="@+id/tv_content"
                  android:layout_marginTop="0.5dp">

        <Button android:layout_width    ="match_parent"
                android:layout_height ="match_parent"
                android:id            ="@+id/btn_retry"
                android:layout_weight ="1"
                android:background    ="@drawable/video_network_selector"
                android:text          ="@string/dlg_retry"
                android:gravity       ="center"
                android:textSize      ="@dimen/h3"
                android:textColor     ="@color/orange"
                />

        <Button android:layout_width    ="match_parent"
                android:layout_height ="match_parent"
                android:id            ="@+id/btn_ok"
                android:layout_weight ="1"
                android:background    ="@drawable/video_network_selector"
                android:text          ="@string/dlg_ok"
                android:gravity       ="center"
                android:textSize      ="@dimen/h3"
                android:textColor     ="@color/orange"
                />
    </LinearLayout>
</LinearLayout>